# uk-used-car-price

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  input.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
artifacts/serving/: metadata.json
configs/: test_train.yaml  train.yaml
infra/iam/: ecs-infra-trust.json
scripts/: prepare_serving_artifacts.py
src/: analyze.py  api.py  config.py  contracts.py  data_io.py  data_loader.py  logging_config.py  model_utils.py  predict.py  preprocess.py  run_utils.py  schema.py  train.py
tests/: test_api.py  test_data_io.py  test_data_loader.py  test_model_utils.py  test_predict.py  test_preprocess.py  test_preprocess_cli.py  test_run_utils.py  test_schema.py  test_train.py
tests/artifacts/runs/: latest_run.txt
tests/artifacts/runs/test_run/: model.joblib
tests/fixtures/: preprocessed_small.csv  raw_small.csv  sample_input.json
