[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uk-used-car-price"
version = "0.1.0"
description = "MLOps portfolio project for UK used car price prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "joblib==1.5.3",
  "numpy==2.4.2",
  "pandas==3.0.1",
  "pydantic==2.12.5",
  "PyYAML==6.0.3",
  "scikit-learn==1.8.0",
  "scipy==1.17.1",
  "threadpoolctl==3.6.0",
  "fastapi",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "ruff==0.15.5",
  "pre-commit==4.5.1",
  "httpx==0.28.1",
]
train = [
  "matplotlib==3.10.8",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".venv",
  ".pytest_cache",
  ".ruff_cache",
  "artifacts",
  "data",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]
ignore = [
  "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true